# cursor

./: .gitignore  README.md
cursordriver/: CMakeLists.txt
cursordriver/include/cursordriver/: cursordriver.hpp
cursordriver/src/: cursordriver.cpp  imagereader.cpp
cursordriver/test/: test.cpp
jpeg-9c-vs15/: apps.sln  cjpeg.vcxproj  djpeg.vcxproj  jpeg.sln  jpeg.vcxproj  jpegtran.vcxproj  rdjpgcom.vcxproj  wrjpgcom.vcxproj
libcursor/: CMakeLists.txt
libcursor/include/cursor/: cursor.hpp
libcursor/src/: bytewriter.hpp  cursor.cpp
libpng-1.6.35/: CMakeSettings.json  aclocal.m4
libpng-1.6.35/lib/libpng/: libpng16.cmake
libpng-1.6.35/libpng-1.6.35/lib/libpng/: libpng16.cmake
zlib-1.2.11/: CMakeSettings.json
zlib-1.2.11/lib/: zlib.exp
